@@ -2,6 +2,10 @@
 
 	* config.c: Allow configuration of Exposure Bias Compensation
 
+	* usb.c: Handle response instead of data answer (happens on failure).
+	* library.c: Handle StoreNotAvailable errors as non critical after
+	  GetObjectHandles
+
 2007-05-09  Marcus Meissner  <marcus@jet.franken.de>
 
 	* ptp.h, usb.c: Send/Receive control messages to class.
